Cleanup, fixes, etc

--- a/examples/notebooks/basic.ipynb
+++ b/examples/notebooks/basic.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Path is relative to the root of the repository\n",
     "%pip install -e ../../"
    ]
   },
@@ -27,7 +28,13 @@
     "from sigkit.modem.psk import PSK\n",
     "from sigkit.impairments.awgn import AWGN\n",
     "from sigkit.metrics.integrity import estimate_snr, calculate_ber\n",
-    "from sigkit.metrics.visuals import plot_constellation, plot_spectrogram, plot_psd, plot_time, plot_frequency"
+    "from sigkit.metrics.visuals import (\n",
+    "    plot_constellation,\n",
+    "    plot_spectrogram,\n",
+    "    plot_psd,\n",
+    "    plot_time,\n",
+    "    plot_frequency\n",
+    ")"
    ]
   },
   {
@@ -41,7 +48,10 @@
     "\n",
     "sample_rate = 1024 # Sample rate in Hz\n",
     "symbol_rate = 32 # Symbol rate\n",
-    "carrier_frequency = 0 # Carrier frequency in Hz, 0 is baseband\n",
+    "carrier_frequency = 128 # Carrier frequency in Hz, 0 is baseband\n",
+    "\n",
+    "# NOTE: All pytorch operations expect baseband, 0 is our default, we set a cf here\n",
+    "# for visualizations later.\n",
     "\n",
     "modem = PSK(\n",
     "    sample_rate=sample_rate,\n",
@@ -52,7 +62,7 @@
     "\n",
     "num_symbols = 64  # Number of symbols to modulate\n",
     "bits = np.random.randint(\n",
-    "    0, 2, size=64 * modem.bits_per_symbol, dtype=np.uint8\n",
+    "    0, 2, size=num_symbols * modem.bits_per_symbol, dtype=np.uint8\n",
     ")\n",
     "signal: Signal = modem.modulate(bits)\n",
     "\n",
@@ -71,7 +81,7 @@
    "source": [
     "\"\"\"Apply an Impairment\"\"\"\n",
     "impairment = AWGN(snr_db=20)  # Target Signal to Noise Ratio in dB\n",
-    "signal: Signal = impairment(signal) # Impairments return a new Signal object for immutability"
+    "signal_impaired: Signal = impairment(signal) # Impairments return a new Signal object for immutability"
    ]
   },
   {
@@ -85,7 +95,9 @@
     "demod_bits = modem.demodulate(signal.samples)  # Demodulate the signal to bits\n",
     "\n",
     "ber = calculate_ber(demod_bits, truth_bits=bits)  # Bit Error Rate\n",
-    "snr = estimate_snr(noisy=demod_bits, clean=bits)  # Signal to Noise Ratio\n",
+    "snr = estimate_snr(  # Signal to Noise Ratio\n",
+    "    noisy=signal_impaired.samples, clean=signal.samples\n",
+    ")\n",
     "\n",
     "print(f\"{ber=}\")\n",
     "print(f\"{snr=}\")"
@@ -102,7 +114,7 @@
     "plot_constellation(signal)  # Plot the constellation diagram\n",
     "plot_spectrogram(signal)  # Plot the spectrogram of the signal\n",
     "plot_psd(signal)  # Plot the Power Spectral Density of the signal\n",
-    "plot_time(signal)  # Plot the time domain representation of the signal\n",
+    "plot_time(signal, n_samples=128)  # Plot the time domain representation of the signal\n",
     "plot_frequency(signal)  # Plot the frequency domain representation of the signal"
    ]
   }
