--- a/examples/notebooks/basic.ipynb
+++ b/examples/notebooks/basic.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f78b9857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path is relative to the root of the repository\n",
+    "%pip install -e ../../"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc1e3e40",
    "metadata": {},
    "outputs": [],
@@ -14,8 +25,16 @@
     "import numpy as np\n",
     "\n",
     "from sigkit.core.base import Signal\n",
+    "from sigkit.modem.psk import PSK\n",
     "from sigkit.impairments.awgn import AWGN\n",
-    "from sigkit.metrics.integrity import estimate_snr, calculate_ber"
+    "from sigkit.metrics.integrity import estimate_snr, calculate_ber\n",
+    "from sigkit.metrics.visuals import (\n",
+    "    plot_constellation,\n",
+    "    plot_spectrogram,\n",
+    "    plot_psd,\n",
+    "    plot_time,\n",
+    "    plot_frequency\n",
+    ")"
    ]
   },
   {
@@ -25,15 +44,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Create a Modulated Signal from Bits \"\"\"\n",
-    "bits = np.random.randint(0, 2, size=4096)\n",
-    "# TODO: Modulate the bits to create a signal\n",
+    "\"\"\"Create a Modulated Signal from Bits\"\"\"\n",
     "\n",
-    "signal = Signal(\n",
-    "    samples=bits,\n",
-    "    sample_rate=1e6,        # Sample rate in Hz\n",
-    "    carrier_frequency=0.0,  # Carrier frequency in Hz\n",
-    ")"
+    "sample_rate = 1024 # Sample rate in Hz\n",
+    "symbol_rate = 32 # Symbol rate\n",
+    "carrier_frequency = 128 # Carrier frequency in Hz, 0 is baseband\n",
+    "\n",
+    "# NOTE: All pytorch operations expect baseband, 0 is our default, we set a cf here\n",
+    "# for visualizations later.\n",
+    "\n",
+    "modem = PSK(\n",
+    "    sample_rate=sample_rate,\n",
+    "    symbol_rate=symbol_rate,\n",
+    "    n_components=4, # Number of PSK components (e.g., 4 for QPSK)\n",
+    "    cf=carrier_frequency\n",
+    ")\n",
+    "\n",
+    "num_symbols = 64  # Number of symbols to modulate\n",
+    "bits = np.random.randint(\n",
+    "    0, 2, size=num_symbols * modem.bits_per_symbol, dtype=np.uint8\n",
+    ")\n",
+    "signal: Signal = modem.modulate(bits)\n",
+    "\n",
+    "# Signal members are set with the attributes of the modem\n",
+    "print(signal, end=\"\\n\\n\")\n",
+    "print(f\"{signal.sample_rate=}\")\n",
+    "print(f\"{signal.carrier_frequency=}\")\n"
    ]
   },
   {
@@ -43,9 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Apply an Impairment \"\"\"\n",
+    "\"\"\"Apply an Impairment\"\"\"\n",
     "impairment = AWGN(snr_db=20)  # Target Signal to Noise Ratio in dB\n",
-    "signal: Signal = impairment.apply(signal) # Impairments return a new Signal object for immutability"
+    "signal_impaired: Signal = impairment(signal) # Impairments return a new Signal object for immutability"
    ]
   },
   {
@@ -55,9 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Calculate Metrics \"\"\"\n",
-    "ber = calculate_ber(signal.samples, bits)  # Bit Error Rate\n",
-    "snr = estimate_snr(signal.samples, bits)  # Signal to Noise Ratio"
+    "\"\"\"Calculate Metrics\"\"\"\n",
+    "demod_bits = modem.demodulate(signal.samples)  # Demodulate the signal to bits\n",
+    "\n",
+    "ber = calculate_ber(demod_bits, truth_bits=bits)  # Bit Error Rate\n",
+    "snr = estimate_snr(  # Signal to Noise Ratio\n",
+    "    noisy=signal_impaired.samples, clean=signal.samples\n",
+    ")\n",
+    "\n",
+    "print(f\"{ber=}\")\n",
+    "print(f\"{snr=}\")"
    ]
   },
   {
@@ -67,20 +110,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Display Visuals \"\"\"\n",
-    "# TODO"
+    "\"\"\"Display Visuals\"\"\"\n",
+    "plot_constellation(signal)  # Plot the constellation diagram\n",
+    "plot_spectrogram(signal)  # Plot the spectrogram of the signal\n",
+    "plot_psd(signal)  # Plot the Power Spectral Density of the signal\n",
+    "plot_time(signal, n_samples=128)  # Plot the time domain representation of the signal\n",
+    "plot_frequency(signal)  # Plot the frequency domain representation of the signal"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
