update notebooks and defaults for training

--- a/examples/notebooks/classification.ipynb
+++ b/examples/notebooks/classification.ipynb
@@ -16,6 +16,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e92d48a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc1e3e40",
    "metadata": {},
    "outputs": [],
@@ -37,7 +45,7 @@
     "from sigkit.modem.psk import PSK\n",
     "from sigkit.models.Module import SigKitClassifier\n",
     "from sigkit.transforms.utils import InferenceTransform\n",
-    "from sigkit.models.utils import PSK_CLASS_MAP"
+    "from sigkit.models.utils import get_class_name"
    ]
   },
   {
@@ -84,10 +92,10 @@
     "with torch.no_grad():\n",
     "    signal = InferenceTransform(signal) # Apply necessary transform to normalize and reshape\n",
     "    output = model(signal.unsqueeze(0))  # Add batch dimension\n",
-    "    predicted_class = torch.argmax(output, dim=1).item()\n",
+    "    predicted_class_idx = torch.argmax(output, dim=1).item()\n",
     "\n",
-    "print(f\"Predicted Modulation Class: {predicted_class}\")\n",
-    "print(f\"Class Name: {PSK_CLASS_MAP[predicted_class]}\")"
+    "print(f\"Predicted Modulation Class: {predicted_class_idx}\")\n",
+    "print(f\"Class Name: {get_class_name(predicted_class_idx)}\")"
    ]
   }
  ],
@@ -107,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
